package org.example;

public class ContadorEletricidade {
    private static int totalContadorEletricidade = 0;




    public static int getTotalContadorEletricidade() {
        return totalContadorEletricidade;
    }


}
